// 
// Example:
//   [*]12/2/2007
//   Joeku
//   This is an example entry.
// 
// The first line is the date, the second
// line is the author of the entry, and all lines
// afterward make up the body of the entry.
// 
// Blank and commented (starting with "//") lines
// will not be displayed in-game. Entries with fewer
// than three lines will not be displayed in-game.

[*]12/17/2015
Victor
- Improved spawners activation, so you'll see more creatures around.

[*]12/16/2015
Adrian
- Raised SkillsCap to 1200.
- Raised each Skill cap to 120.
- Added more vendors to Lake Shire (including archer and weaponsmith).
- Fixed mage vendors containing an absurd amount of necro reagents.
- Fixed rune-marking prevention on all maps.

[*]12/14/2015
Victor
- Added directional damage. More damage when attacking from behind your opponent or flanking him.
- Changed to allow player housing in Ilshenar and Malas.

[*]12/12/2015
Victor
- Added [Duel command.
- Added [Changelog command.
- Changed to display health status and tiles under char name.
- Changed paragons tiles and creation rules.
- Changed character start location and [Recall point to Lake Shire (Malas).
- Changed to make blood remain 1 minute on ground.
- Changed Light Cycle for darker nights.

[*]12/8/2015
Adrian
- Added Keeper Of Necro NPC (Necromancer Vendor).
- Changed to allow gargoyles fly at full speed.

[*]12/6/2015
Victor
- Added Vendor Tile, to create a shopping mall made by players.
- Added items: Linked Gates and Linked Bags.
- Added item: Fishing Net.
- Added Yard & Garden System.
- Added Reagent Harvest System.
- Added item Piano.
- Added Tarot Poker System.
- Added Hair Change Tools.
- Added Fences and Gates System.
- Added item: Tent.
- Added Global Donation Box.
- Added Bloody Bandages System.
- Added [Sleep command and also some Bed Addons.

[*]12/5/2015
Victor
- Now players corpse bones will decay only after 1 day.
- Added [Convoke command.
- Added Poker Texas Holdem System.